MediaFramework/Interop/S.Abi/include/mfp_plugin.h


typedef enum MfpStatus {
    MFP_OK              =  0,
    MFP_ERR_UNSUPPORTED = -1,   
    MFP_ERR_INVALID_ARG = -2,
    MFP_ERR_NOT_FOUND   = -3,   
    MFP_ERR_AGAIN       = -4,   
    MFP_ERR_END         = -5,   
    MFP_ERR_INTERNAL    = -6,
    MFP_ERR_ABI_MISMATCH = -7
} MfpStatus;
typedef enum MfpLogLevel {
    MFP_LOG_TRACE = 0, MFP_LOG_DEBUG = 1, MFP_LOG_INFO = 2, MFP_LOG_WARN = 3, MFP_LOG_ERROR = 4
} MfpLogLevel;
typedef enum MfpCapability {
    MFP_CAP_AUDIO_BACKEND   = 1u << 0,
    MFP_CAP_VIDEO_SOURCE    = 1u << 1,   
    MFP_CAP_AUDIO_SOURCE    = 1u << 2,   
    MFP_CAP_VIDEO_OUTPUT    = 1u << 3,
    MFP_CAP_LAYER_SURFACE   = 1u << 4,
    MFP_CAP_SUBTITLE        = 1u << 5,
    MFP_CAP_CONTROL_DECODER = 1u << 6
} MfpCapability;
typedef enum MfpPixelFormat {
    MFP_PF_UNKNOWN = 0,
    MFP_PF_BGRA32, MFP_PF_RGBA32, MFP_PF_ARGB32, MFP_PF_BGR24, MFP_PF_RGB24,
    MFP_PF_RGBA16, MFP_PF_RGBA16F,
    MFP_PF_I420, MFP_PF_YV12, MFP_PF_NV12, MFP_PF_NV21,
    MFP_PF_YUYV, MFP_PF_UYVY, MFP_PF_YUV422P, MFP_PF_YUV444P, MFP_PF_YUV422P10LE,
    MFP_PF_P010, MFP_PF_P016, MFP_PF_P216, MFP_PF_PA16
} MfpPixelFormat;
typedef enum MfpAudioSampleFormat {
    MFP_AF_F32_INTERLEAVED = 0   
} MfpAudioSampleFormat;
typedef struct MfpVideoFormat {
    uint32_t       width;
    uint32_t       height;
    MfpPixelFormat pixel_format;
    uint32_t       fps_num;       
    uint32_t       fps_den;
} MfpVideoFormat;
typedef struct MfpAudioFormat {
    uint32_t             sample_rate;
    uint32_t             channels;
    MfpAudioSampleFormat sample_format;
} MfpAudioFormat;
typedef struct MfpAudioOpts {
    double   suggested_latency_seconds;   
    uint32_t prebuffer_frames;            
} MfpAudioOpts;
typedef struct MfpTransform2D {
    float a, b, c, d, tx, ty;
} MfpTransform2D;
typedef enum MfpSyncKind {
    MFP_SYNC_NONE = 0,            
    MFP_SYNC_KEYED_MUTEX,        
    MFP_SYNC_SEMAPHORE_BINARY,   
    MFP_SYNC_SEMAPHORE_TIMELINE, 
    MFP_SYNC_FENCE               
} MfpSyncKind;
typedef struct MfpSync {
    MfpSyncKind kind;
    uint64_t    handle;          
    uint64_t    value;           
} MfpSync;
typedef enum MfpFrameKind {
    MFP_FRAME_CPU = 0,
    MFP_FRAME_DMABUF,            
    MFP_FRAME_D3D11,             
    MFP_FRAME_GL_TEXTURE         
} MfpFrameKind;
typedef struct MfpCpuFrame {
    void*   planes[4];
    int32_t strides[4];
    int32_t plane_count;
} MfpCpuFrame;
typedef struct MfpDmaBufFrame {
    int32_t  plane_count;
    int32_t  fds[4];             
    int32_t  offsets[4];
    int32_t  strides[4];
    uint64_t modifiers[4];       
    uint32_t fourcc;             
} MfpDmaBufFrame;
typedef struct MfpD3D11Frame {
    uint64_t luma_nt_shared_handle;
    uint64_t chroma_nt_shared_handle; 
    uint32_t dxgi_format;
    uint32_t array_slice;        
    int32_t  y_stride;
    int32_t  uv_stride;
} MfpD3D11Frame;
typedef struct MfpGlTextureFrame {
    uint32_t texture_id;
    uint32_t target;             
    uint64_t context_id;         
} MfpGlTextureFrame;
typedef struct MfpVideoFrame {
    MfpFrameKind   kind;
    uint32_t       width;
    uint32_t       height;
    MfpPixelFormat pixel_format;
    int64_t        pts_ticks;    
    MfpSync        sync;         
    void*          opaque;       
    union {
        MfpCpuFrame       cpu;
        MfpDmaBufFrame    dmabuf;
        MfpD3D11Frame     d3d11;
        MfpGlTextureFrame gl;
    } u;
} MfpVideoFrame;
typedef struct MfpGlContext {
    uint64_t context_id;
    void* (*get_proc_address)(const char* name);
} MfpGlContext;
typedef struct MfpAudioDeviceInfo {
    char     id[128];
    char     name[128];
    uint32_t max_channels;
    uint32_t default_sample_rate;
} MfpAudioDeviceInfo;
typedef struct MfpHostApi {
    MFP_STRUCT_HEADER;
    void    (*log)(MfpLogLevel level, const char* msg);
    void    (*set_last_error)(const char* msg);          
    int64_t (*now_ticks)(void);                          
    uint32_t supported_frame_kinds;                      
    uint32_t supported_sync_kinds;                       
} MfpHostApi;
typedef struct MfpAudioBackendVTable {
    MFP_STRUCT_HEADER;
    int   (*enumerate_outputs)(void* self, MfpAudioDeviceInfo* out, int cap, int* count);
    int   (*enumerate_inputs )(void* self, MfpAudioDeviceInfo* out, int cap, int* count);
    void* (*open_output)(void* self, const char* device_id, const MfpAudioFormat* fmt, const MfpAudioOpts* opts);
    void* (*open_input )(void* self, const char* device_id, const MfpAudioFormat* fmt, const MfpAudioOpts* opts);
    int   (*output_submit)(void* handle, const float* interleaved, int float_count);   
    int   (*input_read_into)(void* handle, float* dst, int float_count);               
    void  (*close_handle)(void* handle);
    void  (*destroy)(void* self);
    int64_t (*output_played_frames)(void* handle);    
    int     (*output_writable_frames)(void* handle);  
} MfpAudioBackendVTable;
typedef struct MfpAudioSourceVTable {
    MFP_STRUCT_HEADER;
    int  (*native_format)(void* src, MfpAudioFormat* out);
    int  (*read_into)(void* src, float* dst, int float_count);    
    int  (*is_exhausted)(void* src);
    int  (*seek)(void* src, int64_t position_ticks);              
    void (*destroy)(void* src);
} MfpAudioSourceVTable;
typedef struct MfpVideoSourceVTable {
    MFP_STRUCT_HEADER;
    uint32_t supported_frame_kinds;  
    uint32_t supported_sync_kinds;   
    int  (*native_pixel_formats)(void* src, MfpPixelFormat* out, int cap, int* count);
    int  (*select_output_format)(void* src, MfpPixelFormat chosen);
    int  (*get_format)(void* src, MfpVideoFormat* out);       
    int  (*try_read_frame)(void* src, MfpVideoFrame* out);    
    void (*release_frame)(void* src, MfpVideoFrame* frame);   
    int  (*is_exhausted)(void* src);
    int  (*seek)(void* src, int64_t position_ticks);          
    void (*destroy)(void* src);
} MfpVideoSourceVTable;
typedef struct MfpMediaSource {
    void* video;   
    void* audio;   
} MfpMediaSource;
typedef struct MfpMediaSourceProviderVTable {
    MFP_STRUCT_HEADER;
    int (*can_open)(void* self, const char* uri);             
    int (*open)(void* self, const char* uri, MfpMediaSource* out);  
    const MfpVideoSourceVTable* video_source_vtable;          
    const MfpAudioSourceVTable* audio_source_vtable;          
    void (*destroy)(void* self);
} MfpMediaSourceProviderVTable;
typedef struct MfpVideoOutputVTable {
    MFP_STRUCT_HEADER;
    uint32_t accepted_frame_kinds;   
    uint32_t accepted_sync_kinds;    
    int  (*accepted_pixel_formats)(void* self, MfpPixelFormat* out, int cap, int* count);
    int  (*configure)(void* self, const MfpVideoFormat* fmt);
    int  (*submit)(void* self, const MfpVideoFrame* frame);
    void (*destroy)(void* self);
    void (*abandon_queued)(void* self);                       
    int  (*wait_for_idle)(void* self, int32_t timeout_ms);    
} MfpVideoOutputVTable;
typedef struct MfpLayerSurfaceVTable {
    MFP_STRUCT_HEADER;
    int  (*configure_gl)(void* surface, const MfpGlContext* ctx, uint32_t canvas_w, uint32_t canvas_h);
    int  (*render)(void* surface, const MfpGlContext* ctx, uint32_t target_fbo,
                   int64_t master_ticks, const MfpTransform2D* placement, float opacity);
    void (*destroy)(void* surface);
} MfpLayerSurfaceVTable;
typedef struct MfpLayerSurfaceFactoryVTable {
    MFP_STRUCT_HEADER;
    void* (*create)(void* self, const char* config_json);
    const MfpLayerSurfaceVTable* surface_vtable;              
    void  (*destroy)(void* self);                            
} MfpLayerSurfaceFactoryVTable;
typedef struct MfpSubtitleVTable {
    MFP_STRUCT_HEADER;
    int  (*render_at)(void* self, int64_t position_ticks, MfpVideoFrame* out);
    void (*release_frame)(void* self, MfpVideoFrame* frame);
    void (*destroy)(void* self);
} MfpSubtitleVTable;
typedef struct MfpSubtitleProviderVTable {
    MFP_STRUCT_HEADER;
    int   (*can_open)(void* self, const char* uri);
    void* (*open)(void* self, const char* uri, uint32_t canvas_w, uint32_t canvas_h);  
    const MfpSubtitleVTable* subtitle_vtable;
    void  (*destroy)(void* self);
} MfpSubtitleProviderVTable;
typedef struct MfpControlReading {
    char   address[160];
    double value;
} MfpControlReading;
typedef enum MfpControlArgKind {
    MFP_CONTROL_ARG_UNSUPPORTED = 0,
    MFP_CONTROL_ARG_INT32,
    MFP_CONTROL_ARG_FLOAT32,
    MFP_CONTROL_ARG_STRING,
    MFP_CONTROL_ARG_BLOB,
    MFP_CONTROL_ARG_INT64,
    MFP_CONTROL_ARG_DOUBLE64,
    MFP_CONTROL_ARG_TRUE,
    MFP_CONTROL_ARG_FALSE,
    MFP_CONTROL_ARG_NIL,
    MFP_CONTROL_ARG_IMPULSE
} MfpControlArgKind;
typedef struct MfpControlArg {
    MfpControlArgKind kind;
    int32_t           data_len;
    int64_t           int_value;
    double            float_value;
    const uint8_t*    data;
} MfpControlArg;
typedef struct MfpControlDecoderVTable {
    MFP_STRUCT_HEADER;
    int  (*decode)(void* self,
                   const char* osc_address,
                   const MfpControlArg* args, int arg_count, int blob_arg_index,
                   MfpControlReading* out, int out_cap, int* out_count);
    void (*destroy)(void* self);
} MfpControlDecoderVTable;
typedef struct MfpRegistrar {
    MFP_STRUCT_HEADER;
    void*    ctx;
    int (*add_audio_backend)(void* ctx, const char* id, const MfpAudioBackendVTable* vt, void* self);
    int (*add_media_source_provider)(void* ctx, const char* scheme, const MfpMediaSourceProviderVTable* vt, void* self);
    int (*add_video_output)(void* ctx, const char* id, const MfpVideoOutputVTable* vt, void* self);
    int (*add_layer_surface)(void* ctx, const char* kind, const MfpLayerSurfaceFactoryVTable* vt, void* self);
    int (*add_subtitle_provider)(void* ctx, const char* ext, const MfpSubtitleProviderVTable* vt, void* self);
    int (*add_control_decoder)(void* ctx, const char* id, const MfpControlDecoderVTable* vt, void* self);
} MfpRegistrar;
typedef struct MfpPluginInfo {
    MFP_STRUCT_HEADER;
    const char* id;               
    const char* display_name;
    uint32_t    capabilities;     
} MfpPluginInfo;